# buffer-manager

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  run_clock.sh  run_lru.sh  run_lru_2.sh  stat.py
doc/: report.md
src/: buffer_manager.cc  buffer_manager.h  common.h  evaluator.cc  evaluator.h  main.cc  parallel_buffer_manager.cc  parallel_buffer_manager.h  storage_manager.cc  storage_manager.h
src/buffer_manager/: clock_buffer_manager.cc  clock_buffer_manager.h  lru_2_buffer_manager.cc  lru_2_buffer_manager.h  lru_buffer_manager.cc  lru_buffer_manager.h
src/replacer/: clock_replacer.cc  clock_replacer.h  lru_2_replacer.cc  lru_2_replacer.h  lru_replacer.cc  lru_replacer.h  replacer.h
